welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: not found: value k
		setCouleurBrosse(T(k+decalage))
                                   ^